# rmf_traffic_editor

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  editor.cpp  editor.h  editor_model.h  level.cpp  level.h  level_dialog.cpp  level_dialog.h  map.cpp  map.h  package.xml  param.cpp  polygon.cpp  vertex.cpp
building_gazebo_plugins/: CHANGELOG.rst  CMakeLists.txt  package.xml
building_gazebo_plugins/src/: door.cpp  door.hpp  lift.cpp  lift.hpp  lift_plugin.cpp  request_lift.cpp  slotcar.cpp  thumbnail_generator.cpp  toggle_floors.cpp  utils.cpp  utils.hpp
building_map_msgs/: CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
building_map_msgs/msg/: AffineImage.msg  BuildingMap.msg  Door.msg  Graph.msg  GraphEdge.msg  GraphNode.msg  Level.msg  Lift.msg  Param.msg  Place.msg
building_map_msgs/srv/: GetBuildingMap.srv
building_map_tools/: CHANGELOG.rst  QUALITY_DECLARATION.md  package.xml  setup.cfg  setup.py
building_map_tools/building_crowdsim/: _init_argparse.py  building_crowdsim.py  building_yaml_parse.py
building_map_tools/building_crowdsim_navmesh/: build_navmesh.py  connection.py  lane.py  lane_vertex.py  navmesh_generator.py  test.py  util.py  vertex.py
building_map_tools/building_map/: building.py  edge.py  etree_utils.py  fiducial.py  floor.py  generator.py  hole.py  level.py  lift.py  lift_utils.py  model.py  param_value.py  sdf_utils.py  transform.py  utils.py  vertex.py  wall.py
building_map_tools/building_map_combiner/: building_map_combiner.py
building_map_tools/building_map_generator/: _init_argparse.py  building_map_generator.py
building_map_tools/building_map_generators/: building_map_gazebo.py  building_map_ignition.py  building_map_nav.py
building_map_tools/building_map_model_downloader/: __init__.py  building_map_model_downloader.py
building_map_tools/building_map_server/: building_map_server.py
building_map_tools/building_map_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
building_map_tools/model_downloader/: model_downloader.py
building_map_tools/pit_crew/: __init__.py  pit_crew.py  usage_examples.py
building_map_tools/tripy/: LICENSE  setup.py  tox.ini
building_sim_plugins/building_gazebo_plugins/: CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
building_sim_plugins/building_ignition_plugins/: CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
building_sim_plugins/building_plugins_common/: CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
building_sim_plugins/building_sim_common/: CMakeLists.txt  package.xml
building_sim_plugins/building_sim_ign/: CMakeLists.txt  package.xml
rmf_building_map_tools/: CHANGELOG.md  CHANGELOG.rst  QUALITY_DECLARATION.md  README.md  package.xml  setup.cfg  setup.py
rmf_building_map_tools/building_crowdsim/: _init_argparse.py  building_yaml_parse.py
rmf_building_map_tools/building_map/: building.py  coordinate_system.py  edge.py  edge_type.py  fiducial.py  floor.py  generator.py  geopackage.py  hole.py  level.py  lift.py  material_utils.py  model.py  param_value.py  passthrough_transform.py  transform.py  utils.py  vertex.py  wall.py  web_mercator_transform.py  wgs84_transform.py
rmf_building_map_tools/building_map_combiner/: building_map_combiner.py
rmf_building_map_tools/building_map_converter/: building_map_converter.py
rmf_building_map_tools/building_map_generator/: _init_argparse.py  building_map_generator.py
rmf_building_map_tools/building_map_model_downloader/: building_map_model_downloader.py
rmf_building_map_tools/building_map_server/: building_map_server.py  site.py
rmf_building_map_tools/model_downloader/: model_downloader.py
rmf_building_map_tools/pit_crew/: __init__.py  pit_crew.py  usage_examples.py
rmf_traffic_editor/: CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
rmf_traffic_editor/gui/: add_param_dialog.cpp  add_param_dialog.h  building.cpp  building.h  building_dialog.cpp  building_dialog.h  building_level.cpp  building_level.h  building_level_dialog.h  building_level_table.h  constraint.cpp  constraint.hpp  coordinate_system.cpp  coordinate_system.h  delete_dialog.cpp  delete_dialog.h  edge.cpp  edge.h  editor.cpp  editor.h  editor_model.cpp  editor_model.h  feature.cpp  feature.hpp  fiducial.cpp  fiducial.h  graph.cpp  graph.h  layer.cpp  layer.h  layer_dialog.cpp  layer_dialog.h  layer_graphics_effect.cpp  layer_graphics_effect.hpp  layer_table.cpp  layer_table.h  level.cpp  level.h  level_dialog.cpp  level_dialog.h  (+43 more)
rmf_traffic_editor/resources/: resource.qrc
rmf_traffic_editor/scripts/: generate_thumbnails.py  sort_model_list.py
rmf_traffic_editor/test/: CMakeLists.txt  test_gui.cpp
rmf_traffic_editor_assets/: CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
rmf_traffic_editor_test_maps/: CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  package.xml
test_maps/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
traffic_editor/: CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  README.md  colcon.pkg  package.xml  rmf_code_style.cfg
traffic_editor/gui/: add_param_dialog.cpp  add_param_dialog.h  add_vertex.cpp  behavior.cpp  behavior.h  behavior_node.cpp  behavior_node.h  behavior_node_await_signal.cpp  behavior_node_await_signal.h  behavior_node_await_signals.cpp  behavior_node_await_signals.h  behavior_node_navigate.cpp  behavior_node_navigate.h  behavior_node_send_messages.cpp  behavior_node_send_signal.cpp  behavior_node_send_signal.h  behavior_node_teleport.cpp  behavior_node_teleport.h  behavior_node_wait.cpp  behavior_node_wait.h  behavior_schedule_item.cpp  behavior_schedule_item.h  building.cpp  building.h  building_dialog.cpp  building_dialog.h  building_level.cpp  building_level.h  building_level_dialog.cpp  building_level_dialog.h  building_level_table.cpp  building_level_table.h  callbacks.h  correspondence_point.cpp  crowd_sim_dialog.cpp  crowd_sim_dialog.h  (+92 more)
(+346 files in other folders)
