<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rmf_traffic_editor_assets</name>
  <version>1.9.2</version>
  <description>Assets for use with traffic_editor.</description>

  <maintainer email="brandon@openrobotics.org">Brandon Ong</maintainer>
  <maintainer email="marco@openrobotics.org">Marco A. Gutiérrez</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
