<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>traffic_editor</name>
  <version>1.0.0</version>
  <description>traffic editor</description>
  <maintainer email="morgan@openrobotics.org">Morgan Quigley</maintainer>
  <license>Apache License 2.0</license>

  <build_depend>ament_cmake</build_depend>
  <build_depend>ament_index_cpp</build_depend>
  <build_depend>libignition-plugin-dev</build_depend>
  <build_depend>libignition-common3-dev</build_depend>
    
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
