<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>traffic_editor</name>
  <version>1.9999.0</version>
  <description>traffic editor</description>
  <maintainer email="morgan@openrobotics.org">Morgan Quigley</maintainer>
  <license>Apache License 2.0</license>

  <build_depend>ament_cmake_rolling</build_depend>
  <build_depend>ament_index_cpp_rolling</build_depend>
  <build_depend>ignition-plugin</build_depend>
  <build_depend>ignition-common3</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>libqt5-concurrent</build_depend>
  <build_depend>libqt5-widgets</build_depend>
  <build_depend>qtbase5-dev</build_depend>
    
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
